# swap-env

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  python-package.yml  release.yml
mise/: config.toml
src/swap_env/: __main__.py  cli.py  dotenv_dir.py  dotenv_files.py
tests/: conftest.py  test_dotenv_dir.py  test_dotenv_files.py
