[tool.poetry]
name = "swap-env"
version = "1.0.1"
description = "A simple CLI for swapping between .env files"
authors = ["Ben Berry-Allwood <benberryallwood@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "swap_env", from = "src"}]
repository = "https://github.com/benberryallwood/swap-env"

[tool.poetry.dependencies]
python = "^3.9"
inquirerpy = "^0.3.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
ruff = "0.6.8"
pre-commit = "^3.6.2"

[tool.poetry.scripts]
swap-env = 'swap_env.cli:app'

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = [
  "E",    # pycodestyle (error)
  "W",    # pycodestyle (warning)
  "F",    # pyflakes
  "UP",   # pyupgrade
  "C90",  # mccabe
  "I",    # isort
  "FA",   # flake8-future-annotations
]

[tool.ruff.lint.isort]
known-first-party = ["swap_env"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
