[project]
name = "swap-env"
version = "1.0.2"
description = "A simple CLI for swapping between .env files"
authors = [
    { name = "Ben Berry-Allwood", email = "benberryallwood@gmail.com" }
]
readme = "README.md"
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.9"
dependencies = [
    "inquirerpy>=0.3.4,<0.4",
]

[project.urls]
Repository = "https://github.com/benberryallwood/swap-env"

[project.scripts]
swap-env = "swap_env.cli:app"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3,<9",
    "pre-commit==4.0.1",
    "ruff==0.6.9",
]

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = [
  "E",    # pycodestyle (error)
  "W",    # pycodestyle (warning)
  "F",    # pyflakes
  "UP",   # pyupgrade
  "C90",  # mccabe
  "I",    # isort
  "FA",   # flake8-future-annotations
]

[tool.ruff.lint.isort]
known-first-party = ["swap_env"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
