[project]
name = "swap-env"
version = "2.0.0"
description = "A simple CLI for swapping between .env files"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ben Berry-Allwood", email = "benberryallwood@gmail.com" }]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "prompt-toolkit>=3.0.48",
]

[project.urls]
Repository = "https://codeberg.org/benba/swap-env"
Changelog = "https://codeberg.org/benba/swap-env/src/branch/main/CHANGELOG.md"

[project.scripts]
swap-env = "swap_env.cli:app"

[dependency-groups]
dev = [
  "pre-commit>=4.3.0",
  "pytest>=8.4.2",
  "ruff==0.14.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest]
addopts = [
  "--import-mode=importlib",
]

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = [
  "E",  # pycodestyle (error)
  "W",  # pycodestyle (warning)
  "F",  # pyflakes
  "UP",  # pyupgrade
  "C90",  # mccabe
  "I",  # isort
  "FA",  # flake8-future-annotations
]

[tool.ruff.lint.isort]
known-first-party = ["swap_env"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
